@@ -61,10 +61,11 @@ New Features:
     Provides getChar(symbol) for easier access to unicode string for symbol
 - CvMainInterface.updateScreen() fires gameUpdate event (not fired by Civ4)
 - Added <shortcut> tag to XML configuration to create keyboard shortcuts
-- Added module attribute to <mod> element that is used as default for module attributes in all child elements 
+- Added module attribute to <mod> element that is used as default for module attributes in all child elements
 
 Bug Fixes:
 
 - Reloading Python modules now works!
+    Added PythonReloaded event fired after reloading (good time to call onLoad handler for mods that store data)
 - Fixed bug where Trade.findTypes() from TradeUtil.py was returning a list of types rather than a list of trades with that type
 - Fixed DealCanceled event
